includedir = @includedir@/bucket

lib_LIBRARIES = libsgbucket.a

include_HEADERS = newbucket.hxx

libsgbucket_a_SOURCES = newbucket.cxx

# noinst_PROGRAMS = testbucket

# testbucket_SOURCES = testbucket.cxx

# testbucket_LDADD = \
# 	$(top_builddir)/bucket/libsgbucket.a \
# 	$(top_builddir)/misc/libsgmisc.a

INCLUDES += -I$(top_builddir)
