includedir = @includedir@/ephemeris

lib_LIBRARIES = libsgephem.a

include_HEADERS = \
	celestialBody.hxx \
        ephemeris.hxx \
	jupiter.hxx \
	mars.hxx \
	mercury.hxx \
	moon.hxx \
	neptune.hxx \
	saturn.hxx \
	star.hxx \
	stars.hxx \
	uranus.hxx \
	venus.hxx

libsgephem_a_SOURCES = \
	celestialBody.cxx \
	ephemeris.cxx \
	jupiter.cxx \
	mars.cxx \
	mercury.cxx \
	moon.cxx \
	neptune.cxx \
	pluto.hxx \
	saturn.cxx \
	star.cxx \
	stars.cxx \
	uranus.cxx \
	venus.cxx

INCLUDES += -I$(top_srcdir)
