includedir = @includedir@/ephemeris

lib_LIBRARIES = libsgephem.a

include_HEADERS = \
	celestialBody.hxx \
        ephemeris.hxx \
	jupiter.hxx \
	mars.hxx \
	mercury.hxx \
	moonpos.hxx \
	neptune.hxx \
	saturn.hxx \
	star.hxx \
	stardata.hxx \
	uranus.hxx \
	venus.hxx

libsgephem_a_SOURCES = \
	celestialBody.cxx \
	ephemeris.cxx \
	jupiter.cxx \
	mars.cxx \
	mercury.cxx \
	moonpos.cxx \
	neptune.cxx \
	pluto.hxx \
	saturn.cxx \
	star.cxx \
	stardata.cxx \
	uranus.cxx \
	venus.cxx

INCLUDES += -I$(top_srcdir)
