includedir = @includedir@/metar

lib_LIBRARIES = libsgmetar.a

libsgmetar_a_SOURCES = \
	Antoi.cpp Charcmp.cpp Dcdmetar.cpp Dcdmtrmk.cpp Drvmetar.c \
	Fracpart.cpp Local.h Metar.h \
	MetarReport.cpp MetarReport.h \
	MetarStation.cpp MetarStation.h \
	Prtdmetr.cpp Stspack2.cpp Stspack3.cpp

# INCLUDES += -I$(top_builddir)
